# sigma-converter

./: .editorconfig  .gitignore  .mapping_cache.json  README.md  apply_rules.sh  pyproject.toml
.github/workflows/: test.yml
fieldmapper/: __init__.py
fieldmapper/mappings/: av_exploiting.yml  av_hacktool.yml  av_password_dumper.yml  av_ransomware.yml  av_relevant_files.yml  av_webshell.yml  aws_attached_malicious_lambda_layer.yml  aws_cloudtrail_disable_logging.yml  aws_cloudtrail_imds_malicious_usage.yml  aws_cloudtrail_new_acl_entries.yml  aws_cloudtrail_new_route_added.yml  aws_cloudtrail_security_group_change_ingress_egress.yml  aws_cloudtrail_security_group_change_loadbalancer.yml  aws_cloudtrail_security_group_change_rds.yml  aws_cloudtrail_ssm_malicious_usage.yml  aws_config_disable_recording.yml  aws_console_getsignintoken.yml  aws_delete_identity.yml  aws_delete_saml_provider.yml  aws_disable_bucket_versioning.yml  aws_ec2_disable_encryption.yml  aws_ec2_import_key_pair_activity.yml  aws_ec2_startup_script_change.yml  aws_ec2_vm_export_failure.yml  aws_ecs_task_definition_cred_endpoint_query.yml  aws_efs_fileshare_modified_or_deleted.yml  aws_efs_fileshare_mount_modified_or_deleted.yml  aws_eks_cluster_created_or_deleted.yml  aws_elasticache_security_group_created.yml  aws_elasticache_security_group_modified_or_deleted.yml  aws_enum_buckets.yml  aws_guardduty_disruption.yml  aws_iam_backdoor_users_keys.yml  aws_iam_s3browser_loginprofile_creation.yml  aws_iam_s3browser_templated_s3_bucket_policy_creation.yml  aws_iam_s3browser_user_or_accesskey_creation.yml  aws_lambda_function_url.yml  (+2865 more)
output/: av_relevant_files.json  aws_attached_malicious_lambda_layer.json  aws_cloudtrail_disable_logging.json  aws_cloudtrail_imds_malicious_usage.json  aws_cloudtrail_new_acl_entries.json  aws_cloudtrail_new_route_added.json  aws_cloudtrail_security_group_change_ingress_egress.json  aws_cloudtrail_security_group_change_loadbalancer.json  aws_cloudtrail_security_group_change_rds.json  aws_cloudtrail_ssm_malicious_usage.json  aws_config_disable_recording.json  aws_console_getsignintoken.json  aws_delete_identity.json  aws_delete_saml_provider.json  aws_disable_bucket_versioning.json  aws_ec2_disable_encryption.json  aws_ec2_import_key_pair_activity.json  aws_ec2_vm_export_failure.json  aws_ecs_task_definition_cred_endpoint_query.json  aws_efs_fileshare_modified_or_deleted.json  aws_efs_fileshare_mount_modified_or_deleted.json  aws_eks_cluster_created_or_deleted.json  aws_elasticache_security_group_created.json  aws_elasticache_security_group_modified_or_deleted.json  aws_enum_buckets.json  aws_guardduty_disruption.json  aws_iam_s3browser_loginprofile_creation.json  aws_iam_s3browser_templated_s3_bucket_policy_creation.json  aws_iam_s3browser_user_or_accesskey_creation.json  aws_lambda_function_url.json  aws_passed_role_to_glue_development_endpoint.json  aws_rds_dbcluster_actions.json  aws_rds_public_db_restore.json  aws_route_53_domain_transferred_lock_disabled.json  aws_route_53_domain_transferred_to_another_account.json  aws_s3_data_management_tampering.json  aws_securityhub_finding_evasion.json  aws_snapshot_backup_exfiltration.json  aws_sso_idp_change.json  aws_sts_assumerole_misuse.json  (+1840 more)
tests/: test_backend_databricks_sigma.py  test_ocsf_cli.py  test_ocsf_converter.py  test_ocsf_export.py  test_ocsf_rule_limit.py  test_ocsf_rules.py  test_pipelines_databricks_sigma.py
(+107 files in other folders)
