[tool.poetry]
name = "pySigma-backend-databricks"
version = "0.1.4"
description = "pySigma Databricks backend"
authors = ["Alex Ott <alexott@gmail.com>"]
license = "MIT"
repository = "https://github.com/alexott/pySigma-backend-databricks"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.13"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
coverage = "^6.4.1"
autopep8 = "^2.0.4"
pylint = "^2.17.7"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-module-docstring,line-too-long,too-many-lines"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "-vv --cov=sigma --cov-report term --cov-report xml:cov.xml"
testpaths = [
    "tests",
]
