[tool.poetry]
name = "pySigma-backend-databricks"
version = "0.1.4"
description = "pySigma Databricks backend"
authors = ["Alex Ott <alexott@gmail.com>"]
license = "MIT"
repository = "https://github.com/alexott/pySigma-backend-databricks"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pysigma = "^0.11.23"
inflection = "^0.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-module-docstring,line-too-long,too-many-lines"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "-vv --cov=sigma --cov-report term --cov-report xml:cov.xml"
testpaths = [
    "tests",
]
